--- a/oxide/data/DeathNotes/PlayerSettings.json
+++ b/oxide/data/DeathNotes/PlayerSettings.json
@@ -26,5 +26,49 @@
   "76561198364636201": {
     "ui": false,
     "chat": true
+  },
+  "76561198175008134": {
+    "ui": false,
+    "chat": true
+  },
+  "76561198105547103": {
+    "ui": false,
+    "chat": true
+  },
+  "76561198115220630": {
+    "ui": false,
+    "chat": true
+  },
+  "76561197965250097": {
+    "ui": false,
+    "chat": true
+  },
+  "76561198272378105": {
+    "ui": false,
+    "chat": true
+  },
+  "76561198360024255": {
+    "ui": false,
+    "chat": true
+  },
+  "76561198212379997": {
+    "ui": false,
+    "chat": true
+  },
+  "76561198099098867": {
+    "ui": false,
+    "chat": true
+  },
+  "76561198309487226": {
+    "ui": false,
+    "chat": true
+  },
+  "76561198386591992": {
+    "ui": false,
+    "chat": true
+  },
+  "76561198816457917": {
+    "ui": false,
+    "chat": true
   }
 }
